Fix brand logo visibility across screen sizes
- Added second brand logo to the header for screens below 720px.
- Adjusted the existing one's visibility.
- Fixed logo aligment.

--- a/src/styles/scss/base/_utils.scss
+++ b/src/styles/scss/base/_utils.scss
@@ -19,4 +19,20 @@
 	@extend %flex-center;
 }
 
+.show-desktop {
+	display: none;
+
+	@include mq(medium) {
+		display: inline-block;
+	}
+}
+
+.show-mobile {
+	display: inline-block;
+
+	@include mq(medium) {
+		display: none;
+	}
+}
+
 /* Utils end */
