--- a/src/styles/scss/layout/_header.scss
+++ b/src/styles/scss/layout/_header.scss
@@ -10,6 +10,7 @@ header {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: stretch;
+	justify-content: center;
 	gap: 1rem;
 }
 
